[package]
name = "openapi"
version = "1"
authors = ["OpenAPI Generator team and contributors"]
description = "API to keep track of transactions sent via Gnosis Safe smart contracts"
license = "MIT License"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
